2013年 3月 6日 水曜日 23時20分59秒 JST some fix

--- a/languages/nephila-clavata-en.po
+++ b/languages/nephila-clavata-en.po
@@ -50,8 +50,8 @@ msgstr "Done!"
 msgid "Error! : "
 msgstr "Error! : "
 
-msgid "The €"%s€" field is required."
-msgstr "The €"%s€" field is required."
+msgid "The \"%s\" field is required."
+msgstr "The \"%s\" field is required."
 
 # Region Name
 msgid "US_EAST_1"
