--- a/languages/nephila-clavata-ja.po
+++ b/languages/nephila-clavata-ja.po
@@ -4,7 +4,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-03-06 12:00+0900\n"
 "POT-Creation-Date: 2012-04-19 14:58+0900\n"
-"PO-Revision-Date: 2013-03-06 23:04+0900\n"
+"PO-Revision-Date: 2013-03-08 09:27+0900\n"
 "Last-Translator: wokamoto <wokamoto1973@gmail.com>\n"
 "Language-Team: JAPANESE <http://wppluginsj.sourceforge.jp/>\n"
 "MIME-Version: 1.0\n"
@@ -19,7 +19,7 @@ msgstr ""
 
 # Plugin Name
 msgid "Nephila clavata"
-msgstr "絡新婦"
+msgstr "Nephila clavata (絡新婦)"
 
 # description
 msgid ""
